# detumble_sim

./: CMakeLists.txt  README.md  dynamics.cpp  dynamics.h  main.cpp  spacecraft.cpp  spacecraft.h
